# vr-hand-tracking

./: .gitignore  Proposal.md  README.md  TCP_Receiver.py  UDP_socket.py
UnityProject/Assets/: HandTracking.cs  HelloWorld.cs  LogDisplay.cs  LogManager.cs
UnityProject/Assets/Plugins/Android/: AndroidManifest.xml
UnityProject/Assets/Resources/: OculusRuntimeSettings.asset
UnityProject/Assets/Scenes/: SampleScene.unity
UnityProject/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
UnityProject/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
UnityProject/Assets/XR/Settings/: OpenXR Package Settings.asset
UnityProject/UserSettings/Layouts/: default-6000.dwlt
src/: helpers.h
src/hand_tracking_quest/: CMakeLists.txt  package.xml
src/hand_tracking_quest/include/hand_tracking_quest/: HandTrackerQuest.hpp
src/hand_tracking_quest/launch/: hand.launch.xml
src/hand_tracking_quest/src/: HandTrackerQuest.cpp  JointAngleVisualizer.cpp
src/hand_tracking_quest/test/: test_hand_tracker_node.cpp
